# streamlit_foret_explo

./: .gitignore  README.md  app.py  home.py  parse_shapefile.sql  pyproject.toml
data/: departements_geofla.parquet
pages/: 1_🌳_explore_placettes.py  1_🔨_generate_placettes.py  2_🕵️‍♂️_explore_placettes.py
