[project]
name = "streamlit_foret_explo"
version = "0.2.0"
description = "POC exploration des relevés des placettes forêts de l'ONF"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.29.0",
    "streamlit>=1.46.0",
    "folium>=0.20.0",
    "streamlit-folium>=0.25.0",
    "shapely>=2.1.1",
    "numpy>=2.3.0",
    "geopandas>=1.1.1",
]

[tool.ruff]
line-length = 200

[dependency-groups]
dev = [
    "pretty-errors>=1.2.25",
    "ruff>=0.11.8",
]
